* Allow changing job owner
* Check upper case and lower case table names for cache resultset jobs
* Fix for parent parameters not being considered in drilldown reports
* Stop setting jasperreports excel export options
* Added snowflake jdbc driver
* Include daterange parameter template files in import/export
* Fix for error when using wildfly
* Removed report quick edit panel
* Updated jclouds

ART 3.9
* Allow jTDS driver to use imageColumns option
* Enable edit of self service dashboards
* Use bootstrap select for chained parameters
* Allow running of an update statement before/after a job runs
* Don't require column alias for speedometer chart with sql server database
* Fix for show legend not being respected when running report
* Updated sql server driver, commons-lang, jxls

ART 3.8
* Have self service dashboards
* Fix for error when run with java 7
* Have configurable roles
* Added :reportId: and :jobId: tags
* Don't output extra tabs for tsv report format
* Updated jxls

ART 3.7
* Added google cloud storage destination type
* Fix for pivottable.js renderers localization not working
* Omitted neo4j driver
* Fix for documentation link not working
* Updated pt_BR translation
* Fix for save not working with pivottable.js report run using run in new page option
* Fix for report source not being displayed in quick edit section
* Allow saving pivot table only from a tabular report
* Allow changing report name when overwriting pivottable.js and gridstack reports
* Allow saving of selected parameters when saving pivottable.js and gridstack reports
* Fix for saiku art home link not working when art deployed in root
* Updated jclouds, pivottable.js, ucanaccess

ART 3.6
* Changed job templates directory to WEB-INF\thymeleaf\jobs
* Allow saving of pivottable.js state
* Allow modifying and saving of gridstack dashboard item positions
* Added AUTOHEIGHT and AUTOWIDTH options for gridstack dashboard items
* Provide record import/export to json
* Updated yadcf

ART 3.5